--- a/src/app/home/tab1.page.scss
+++ b/src/app/home/tab1.page.scss
@@ -91,3 +91,11 @@ ion-thumbnail~b {
   max-width: 40%;
   text-align: end;
 }
+
+.h1-wrap{
+  max-width: 70vw !important;
+}
+
+img {
+  border-radius: 50% !important;
+}
