--- a/src/app/tabs/tabs.page.html
+++ b/src/app/tabs/tabs.page.html
@@ -2,7 +2,7 @@
   <ion-tab-bar
     slot="bottom"
     color="transparent"
-    style="--border: 0px !important"
+    class="tab-bg"
   >
     <ion-tab-button tab="home" href="/tabs/home">
       <ion-icon aria-hidden="true" name="home-outline"></ion-icon>
@@ -18,6 +18,10 @@
         size="large"
         name="add-circle-outline"
       ></ion-icon>
+    </ion-tab-button>
+
+    <ion-tab-button tab="stats" href="/tabs/stats">
+      <ion-icon aria-hidden="true" name="pie-chart-outline"></ion-icon>
     </ion-tab-button>
 
     <ion-tab-button tab="smslog" href="/tabs/smslog">
