--- a/src/app/tabs/tabs.page.scss
+++ b/src/app/tabs/tabs.page.scss
@@ -1,6 +1,6 @@
 .tab-bg {
     --border: 0px !important;
     padding: 10px 0;
-    background: linear-gradient(1deg, #000000, #00000000);
+    // background: linear-gradient(1deg, #000000, #00000000);
     backdrop-filter: blur(5px);
 }
