state page made workble and loader added to sms page

--- a/src/app/stats/stats.page.html
+++ b/src/app/stats/stats.page.html
@@ -18,7 +18,7 @@
   [labels]="pieChartLabels"
   [options]="pieChartOptions"
   [legend]="pieChartLegend"></canvas>
-  <swiper-container [loop]="true">
+  <!-- <swiper-container [loop]="true">
     <swiper-slide>
       <h1>ash</h1>
     </swiper-slide>
@@ -28,5 +28,5 @@
     <swiper-slide>
       <h1>ash</h1>
     </swiper-slide>
-  </swiper-container>
+  </swiper-container> -->
 </ion-content>
